--- a/chapter_inviscid.tex
+++ b/chapter_inviscid.tex
@@ -1,13 +1,7 @@
 \part{Ideal fluids}
 
 \chapter{Continuity of mass}
-
-\section{The concept of particle}
-
-\section{The continuity equation}
-
-\section{Incompressibility}
-
+\input{continuity}
 
 \chapter{Euler's equations}
 
