--- a/Fluid_Mechanics.tex
+++ b/Fluid_Mechanics.tex
@@ -7,6 +7,10 @@
 
 \usepackage{bbold}
 
+\usepackage{makeidx}
+
+\makeindex
+
 
 \usepackage{amsmath}
 \usepackage{bm}
@@ -27,6 +31,7 @@
 \newcommand{\bfe}{\mathbf{e}}
 \newcommand{\bfn}{\mathbf{n}}
 \newcommand{\bfr}{\mathbf{r}}
+
 \newcommand{\vort}{\bm{\omega}}
 \newcommand{\divu}{\nabla\cdot\bfu}
 
@@ -47,5 +52,6 @@
    \listoftables
 \end{appendix}
 
+\printindex
 
 \end{document}
