trivial change, to check git

--- a/Euler.tex
+++ b/Euler.tex
@@ -1,6 +1,6 @@
 \section{Material derivative}
 
-When expressing our equations, it is important to distiguish between
+When deriving our equations, it is important to distiguish between
 a partial time variation and the total one. This is mathematically
 encapsulated in the expression for the total variation of a function
 of three Cartesian coordinates plus time:
@@ -11,6 +11,7 @@ of three Cartesian coordinates plus time:
 \frac{\partial A }{\partial y} \frac{dy }{dt} +
 \frac{\partial A }{\partial z} \frac{dz }{dt} .
 \]
+
 
 The Cartesian components are not to be considered as independent of
 the time. Rather, their time derivatives are precisely the components
