--- a/continuity.tex
+++ b/continuity.tex
@@ -1,5 +1,12 @@
 \section{The concept of particle}
 
+In these notes, we will be dealing with ``particles'' \index{particle}
+quite a lot. This is because fluid dynamics are part of what is called
+continuum mechanics, in which bodies are supposed to be continuous in
+a mathematical sense. By this me mean, we can pieces of any material
+as small as we want. 
+
+
 \section{The continuity equation}
 \label{sec:continuity}
 
