--- a/Fluid_Mechanics.tex
+++ b/Fluid_Mechanics.tex
@@ -27,6 +27,7 @@
 \newcommand{\bfq}{\mathbf{q}}
 \newcommand{\bfv}{\mathbf{v}}
 \newcommand{\bff}{\mathbf{f}}
+\newcommand{\bfF}{\mathbf{F}}
 \newcommand{\bfg}{\mathbf{g}}
 \newcommand{\bfe}{\mathbf{e}}
 \newcommand{\bfn}{\mathbf{n}}
