--- a/particle.tex
+++ b/particle.tex
@@ -267,6 +267,9 @@ We therefore arrive at the expression for the rate of change of a particle:
 \frac{d V}{dt} = V  \nabla\cdot \bfu .
 \]
 
+\subsection{Continuity, re-revisited}
+\label{sec:continuity3}
+
 This is the expression that was lacking in our derivation in
 Section \ref{sec:continuity}. Indeed, if the mass of a particle is
 constant, it is trivial to recover the continuity equation for the
